# backend-example

./: README.md  pyproject.toml
src/: config.yaml
src/service_app/: alembic.ini  routes.py  service.py
src/service_app/data_gateway/models/: __init__.py  _base.py  device.py
src/service_app/interactors/net_scanner/: entities.py
src/service_app/migrations/: env.py
src/service_app/migrations/versions/: 00001_device__new_table.py
src/service_app/tools/: containers.py
src/service_app/views/: health.py
tests/: base.py
tests/service_app/integration/: test_health.py
tests/service_app/unit/interactors/test_entities/: test_NetInterface.py
