[tool.poetry]
name = "backend-example"
version = "0.1.0"
description = "Backend service example"
authors = ["Vasilii Kuimov <vasilykuimov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

aiohttp = "3.8.1"
aiohttp-devtools = "1.0.post0"
black = "22.6.0"
dependency-injector = "4.40.0"
mypy = "0.971"
pytest = "7.1.2"
pytest-aiohttp = "1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
