[tool.poetry]
name = "backend-example"
version = "0.1.0"
description = "Backend service example"
authors = ["Vasilii Kuimov <vasilykuimov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

aiohttp = "3.8.1"
aiohttp-devtools = "1.0.post0"
asyncpg = "0.26.0"
dependency-injector = "4.40.0"
psutil = "5.9.1"
pydantic = "1.10.1"
PyYAML = "5.3.1"
SQLAlchemy = "1.4.40"

[tool.poetry.dev-dependencies]
alembic = "1.8.1"
black = "22.8.0"
pytest = "7.1.3"
pytest-aiohttp = "1.0.4"
mypy = "0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
